--- a/css/main.css
+++ b/css/main.css
@@ -2585,6 +2585,7 @@ html.no-csstransitions .home-content__main {
     vertical-align: bottom;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
+    border: 2px solid whitesmoke;
 }
 
 .item-folio__thumb a {
