--- a/css/main.css
+++ b/css/main.css
@@ -1254,8 +1254,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .subhead--dark {
-    /* color: #000000; */
-    color: rgba(255, 255, 255, 0.5);
+    /* color: rgba(255, 255, 255, 0.5); */
+    color: rgba(42, 153, 58, 0.8)
 }
 
 
@@ -1767,8 +1767,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: .4;
-    /* opacity: .8; */
+    /* opacity: .4; */
+    opacity: .8;
     background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.8) 100%);
     background: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.8) 100%);
     background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.8) 100%);
@@ -2257,7 +2257,7 @@ html.no-csstransitions .home-content__main {
     font-size: 2.5rem;
     line-height: 1.8;
     /* color: #555555; */
-    margin-top: 5rem;
+    margin-top: 4rem;
 }
 
 .testimonials__slide {
@@ -2265,11 +2265,11 @@ html.no-csstransitions .home-content__main {
 }
 
 .testimonials__avatar {
-    height: 20rem;
-    width: 20rem;
+    height: 23rem;
+    width: 23rem;
     border-radius: 50%;
     border: 2px solid rgba(255, 255, 255, 0.5);
-    margin: 0 auto 1.2rem auto;
+    margin: 0 auto 0.5rem auto;
 }
 
 .testimonials__name, 
@@ -2417,131 +2417,6 @@ html.no-csstransitions .home-content__main {
         width: 7.4rem;
     }
 }
-
-
-
-/* ===================================================================
- * # services
- *
- * ------------------------------------------------------------------- */
-/* .s-services {
-    padding-top: 16.2rem;
-    padding-bottom: 13.2rem;
-    background-color: #FFFFFF;
-    color: #757575;
-    position: relative;
-} */
-
-
-/* ------------------------------------------------------------------- 
- * ## services list
- * ------------------------------------------------------------------- */
-/* .services-list {
-    margin-top: 6rem;
-}
-
-.services-list .service-item {
-    margin-bottom: .9rem;
-}
-
-.services-list .service-item h3 {
-    margin-top: 0;
-}
-
-.services-list .service-item:nth-child(2n+1) {
-    padding-right: 50px;
-}
-
-.services-list .service-item:nth-child(2n+2) {
-    padding-left: 50px;
-}
-
-.services-list .service-text {
-    margin-left: 7.8rem;
-}
-
-.services-list .service-icon {
-    float: left;
-    color: #39b54a;
-    font-size: 4.8rem;
-    margin-top: -.6rem;
-} */
-
-
-/* ------------------------------------------------------------------- 
- * responsive:
- * services
- * ------------------------------------------------------------------- */
-/* @media only screen and (max-width: 1200px) {
-    .services-list {
-        max-width: 1000px;
-    }
-    .services-list .service-item:nth-child(2n+1) {
-        padding-right: 30px;
-    }
-    .services-list .service-item:nth-child(2n+2) {
-        padding-left: 30px;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    .services-list h3 {
-        font-size: 2.5rem;
-    }
-    .services-list .service-item:nth-child(2n+1) {
-        padding-right: 20px;
-    }
-    .services-list .service-item:nth-child(2n+2) {
-        padding-left: 20px;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .services-list {
-        margin-top: 4.2rem;
-        max-width: 500px;
-        text-align: center;
-    }
-    .services-list .service-item:nth-child(n) {
-        padding-right: 15px;
-        padding-left: 15px;
-    }
-    .services-list h3 {
-        font-size: 3rem;
-    }
-    .services-list .service-text {
-        margin-left: 0;
-    }
-    .services-list .service-icon {
-        font-size: 4.5rem;
-        float: none;
-        margin-top: 0;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .s-services {
-        padding-top: 12rem;
-    }
-    .services-list .service-item:nth-child(n) {
-        padding-right: 10px;
-        padding-left: 10px;
-    }
-    .services-list h3 {
-        font-size: 2.5rem;
-    }
-}
-
-@media only screen and (max-width: 400px) {
-    .services-list .service-item:nth-child(n) {
-        padding-right: 0;
-        padding-left: 0;
-    }
-    .services-list h3 {
-        font-size: 2.5rem;
-    }
-} */
-
 
 
 /* ===================================================================
