--- a/css/main.css
+++ b/css/main.css
@@ -690,7 +690,7 @@ select {
 }
 
 textarea {
-    min-height: 25rem;
+    min-height: 20rem;
 }
 
 input[type="email"]:focus,
@@ -1309,7 +1309,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .section-header {
     text-align: center;
     position: relative;
-    margin-bottom: 3.6rem;
+    margin-bottom: 2rem;
     max-width: 960px;
 }
 
@@ -2795,13 +2795,13 @@ section.s-skills > div.skills-outer{
         margin-top: 1rem;
     }
     .skillIconContainer{
-        height: 6rem;
-        width: 6rem;
+        height: 7rem;
+        width: 7rem;
         display: inline-block;
         margin: 30px;
     }
     .skillIconContainer p{
-        font-size: 0.9rem;
+        font-size: 1.1rem;
     }
 }
 
@@ -2814,13 +2814,13 @@ section.s-skills > div.skills-outer{
         margin-top: 0.5rem;
     }
     .skillIconContainer{
-        height: 5rem;
-        width: 5rem;
+        height: 6.5rem;
+        width: 6.5rem;
         display: inline-block;
-        margin: 30px;
+        margin: 24px;
     }
     .skillIconContainer p{
-        font-size: 0.7rem;
+        font-size: 1rem;
     }
 
 }
@@ -2830,13 +2830,13 @@ section.s-skills > div.skills-outer{
         margin-top: 0.05rem;
     }
     .skillIconContainer{
-        height: 4rem;
-        width: 4rem;
+        height: 6rem;
+        width: 6rem;
         display: inline-block;
         margin: 30px;
     }
     .skillIconContainer p{
-        font-size: 0.6rem;
+        font-size: 1rem;
     }
 
 }
@@ -2853,7 +2853,8 @@ section.s-skills > div.skills-outer{
     background-repeat: no-repeat;
     background-position: center, center;
     padding-top: 14rem;
-    padding-bottom: 12rem;
+    /* padding-bottom: 12rem; */
+    padding-bottom: 0rem;
     color: rgba(255, 255, 255, 0.5);
     position: relative;
 }
@@ -2919,8 +2920,8 @@ section.s-skills > div.skills-outer{
     max-width: 1000px;
     background-color: rgba(0, 0, 0, 0.2);
     color: rgba(255, 255, 255, 0.4);
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     font-family: "montserrat-light", sans-serif;
     font-size: 1.5rem;
     line-height: 2;
@@ -2948,7 +2949,7 @@ section.s-skills > div.skills-outer{
 .contact-content textarea,
 .contact-content select {
     color: rgba(255, 255, 255, 0.6);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.07);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
     margin-bottom: .9rem;
 }
 
@@ -3078,7 +3079,7 @@ textarea#contactMessage::placeholder {
     font-size: 1.5rem;
     line-height: 2;
     padding: 3rem;
-    margin-bottom: 3.6rem;
+    margin-bottom: 3.6rem;    
     width: 100%;
 }
 
