--- a/css/main.css
+++ b/css/main.css
@@ -1218,6 +1218,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     font-size: 7rem;
     line-height: 1.25;
     color: #000000;
+    opacity: 0.7;
     margin-top: 0;
     /* -webkit-text-stroke: 1px rgba(57, 181, 74, 0.8); */
 }
@@ -1661,13 +1662,25 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     transition: all 0.5s ease-in-out;
 }
 
-.header-menu-toggle.opaque {
-    background-color: #000000;
+.header-menu-toggle::after {
+    position: absolute;
+    content: '';
+    top:0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: black;
+    transform-origin:left;
+    transition:width 0.25s ease;
+    z-index:-1;
+}
+.header-menu-toggle.opaque::after {
+    width: 100%;
 }
 
-.header-menu-toggle.opaque .header-menu-text {
+/* .header-menu-toggle.opaque .header-menu-text {
     background-color: #000000;
-}
+} */
 
 .header-menu-toggle:hover, .header-menu-toggle:focus {
     color: #FFFFFF;
@@ -1999,7 +2012,6 @@ html.no-csstransitions .home-content__main {
     opacity: 1;
 }
 
-
 /* ------------------------------------------------------------------- 
  * ## home animations
  * ------------------------------------------------------------------- */
@@ -2215,14 +2227,15 @@ html.no-csstransitions .home-content__main {
 .s-about {
     padding-top: 12rem;
     padding-bottom: 9rem;
-    /* background-color: rgba(57, 181, 74, 1); */
-    background-color: rgba(230, 230, 230, 0.8);
+    /* background-color: rgba(230, 230, 230, 0.8); */
+    background-color: #fff;
     color: #010507;
     position: relative;
 }
 
 .s-about .section-header.has-bottom-sep::before {
-    background-color: rgba(255, 255, 255, 0.25);
+    /* background-color: rgba(255, 255, 255, 0.25); */
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 .about-desc {
@@ -2267,7 +2280,7 @@ html.no-csstransitions .home-content__main {
     height: 23rem;
     width: 23rem;
     border-radius: 50%;
-    border: 2px solid rgba(255, 255, 255, 0.5);
+    border: 2px solid rgba(0, 0, 0, 0.6);
     margin: 0 auto 0.5rem auto;
 }
 
