fixing css and remove unused css

--- a/css/vendor.css
+++ b/css/vendor.css
@@ -1388,7 +1388,7 @@ over element that should close gallery
 @media (-webkit-min-device-pixel-ratio: 1.1), (-webkit-min-device-pixel-ratio: 1.09375), (min-resolution: 105dpi), (min-resolution: 1.1dppx) {
     /* Serve SVG sprite if browser supports SVG and resolution is more than 105dpi */
     .pswp--svg .pswp__button, .pswp--svg .pswp__button--arrow--left:before, .pswp--svg .pswp__button--arrow--right:before {
-        background-image: url(images/photoswipe/default-skin.svg);
+        background-image: url(../images/photoswipe/default-skin.svg);
     }
     .pswp--svg .pswp__button--arrow--left, .pswp--svg .pswp__button--arrow--right {
         background: none;
