--- a/css/main.css
+++ b/css/main.css
@@ -220,104 +220,6 @@ small {
     line-height: inherit;
 }
 
-blockquote {
-    margin: 3.9rem 0;
-    padding-left: 4.5rem;
-    position: relative;
-}
-
-blockquote:before {
-    content: "\201C";
-    font-size: 10rem;
-    line-height: 0px;
-    margin: 0;
-    color: rgba(0, 0, 0, 0.25);
-    font-family: arial, sans-serif;
-    position: absolute;
-    top: 3.6rem;
-    left: 0;
-}
-
-blockquote p {
-    font-family: "montserrat-regular", sans-serif;
-    padding: 0;
-    font-size: 2.1rem;
-    line-height: 1.857;
-    color: #111111;
-}
-
-blockquote cite {
-    display: block;
-    font-family: "montserrat-regular", sans-serif;
-    font-size: 1.4rem;
-    font-style: normal;
-    line-height: 1.5;
-}
-
-blockquote cite:before {
-    content: "\2014 \0020";
-}
-
-blockquote cite a, blockquote cite a:visited {
-    color: #828282;
-    border: none;
-}
-
-abbr {
-    font-family: "lora-bold", serif;
-    font-variant: small-caps;
-    text-transform: lowercase;
-    letter-spacing: .05rem;
-    color: #828282;
-}
-
-var, kbd, samp, code, pre {
-    font-family: Consolas, "Andale Mono", Courier, "Courier New", monospace;
-}
-
-pre {
-    padding: 2.4rem 3rem 3rem;
-    background: #F1F1F1;
-    overflow-x: auto;
-}
-
-code {
-    font-size: 1.4rem;
-    margin: 0 .2rem;
-    padding: .3rem .6rem;
-    white-space: nowrap;
-    background: #F1F1F1;
-    border: 1px solid #E1E1E1;
-    border-radius: 3px;
-}
-
-pre > code {
-    display: block;
-    white-space: pre;
-    line-height: 2;
-    padding: 0;
-    margin: 0;
-}
-
-pre.prettyprint > code {
-    border: none;
-}
-
-del {
-    text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-    border-bottom: 1px dotted;
-    cursor: help;
-    text-decoration: none;
-}
-
-mark {
-    background: #ffd900;
-    color: #000000;
-}
-
 hr {
     border: solid rgba(0, 0, 0, 0.1);
     border-width: 1px 0 0;
@@ -354,58 +256,6 @@ ul ul, ul ol, ol ol, ol ul {
     margin: .6rem 0 .6rem 1.7rem;
 }
 
-ul.disc li {
-    display: list-item;
-    list-style: none;
-    padding: 0 0 0 .8rem;
-    position: relative;
-}
-
-ul.disc li::before {
-    content: "";
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: #39b54a;
-    position: absolute;
-    left: -17px;
-    top: 11px;
-    vertical-align: middle;
-}
-
-dt {
-    margin: 0;
-    color: #39b54a;
-}
-
-dd {
-    margin: 0 0 0 2rem;
-}
-
-
-/* ------------------------------------------------------------------- 
- * ## responsive video container
- * ------------------------------------------------------------------- */
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-}
-
-.video-container iframe,
-.video-container object,
-.video-container embed,
-.video-container video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-
 /* ------------------------------------------------------------------- 
  * ## floated image
  * ------------------------------------------------------------------- */
@@ -415,45 +265,6 @@ img.pull-right {
 
 img.pull-left {
     margin: 1.5rem 3rem 0 0;
-}
-
-
-/* ------------------------------------------------------------------- 
- * ## tables
- * ------------------------------------------------------------------- */
-table {
-    border-width: 0;
-    width: 100%;
-    max-width: 100%;
-    font-family: "lora-regular", serif;
-}
-
-th, td {
-    padding: 1.5rem 3rem;
-    text-align: left;
-    border-bottom: 1px solid #E8E8E8;
-}
-
-th {
-    color: #000000;
-    font-family: "montserrat-bold", sans-serif;
-}
-
-td {
-    line-height: 1.5;
-}
-
-th:first-child, td:first-child {
-    padding-left: 0;
-}
-
-th:last-child, td:last-child {
-    padding-right: 0;
-}
-
-.table-responsive {
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
 }
 
 
@@ -945,258 +756,6 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 
-/* ------------------------------------------------------------------- 
- * ## additional typo styles 
- * ------------------------------------------------------------------- */
-
-
-/* drop cap 
- * ----------------------------------------------- */
-.drop-cap:first-letter {
-    float: left;
-    margin: 0;
-    padding: 1.5rem .6rem 0 0;
-    font-size: 8.4rem;
-    font-family: "montserrat-regular", sans-serif;
-    font-weight: bold;
-    line-height: 6rem;
-    text-indent: 0;
-    background: transparent;
-    color: #000000;
-}
-
-
-/* line definition style 
- * ----------------------------------------------- */
-.lining dt, .lining dd {
-    display: inline;
-    margin: 0;
-}
-
-.lining dt + dt:before, .lining dd + dt:before {
-    content: "\A";
-    white-space: pre;
-}
-
-.lining dd + dd:before {
-    content: ", ";
-}
-
-.lining dd + dd:before {
-    content: ", ";
-}
-
-.lining dd:before {
-    content: ": ";
-    margin-left: -0.2em;
-}
-
-
-/* dictionary definition style 
- * ----------------------------------------------- */
-.dictionary-style dt {
-    display: inline;
-    counter-reset: definitions;
-}
-
-.dictionary-style dt + dt:before {
-    content: ", ";
-    margin-left: -0.2em;
-}
-
-.dictionary-style dd {
-    display: block;
-    counter-increment: definitions;
-}
-
-.dictionary-style dd:before {
-    content: counter(definitions, decimal) ". ";
-}
-
-
-/** 
- * Pull Quotes
- * -----------
- * markup:
- *
- * <aside class="pull-quote">
- *		<blockquote>
- *			<p></p>
- *		</blockquote>
- *	</aside>
- *
- * --------------------------------------------------------------------- */
-
-.pull-quote {
-    position: relative;
-    padding: 2.1rem 3rem 2.1rem 0px;
-}
-
-.pull-quote:before, .pull-quote:after {
-    height: 1em;
-    position: absolute;
-    font-size: 10rem;
-    font-family: Arial, Sans-Serif;
-    color: rgba(0, 0, 0, 0.25);
-}
-
-.pull-quote:before {
-    content: "\201C";
-    top: -3.6rem;
-    left: 0;
-}
-
-.pull-quote:after {
-    content: '\201D';
-    bottom: 3.6rem;
-    right: 0;
-}
-
-.pull-quote blockquote {
-    margin: 0;
-}
-
-.pull-quote blockquote:before {
-    content: none;
-}
-
-
-/** 
- * Stats Tab
- * ---------
- * markup:
- *
- * <ul class="stats-tabs">
- *		<li><a href="#">[value]<em>[name]</em></a></li>
- *	</ul>
- *
- * Extend this object into your markup.
- *
- * --------------------------------------------------------------------- */
-
-.stats-tabs {
-    padding: 0;
-    margin: 3rem 0;
-}
-
-.stats-tabs li {
-    display: inline-block;
-    margin: 0 1.5rem 3rem 0;
-    padding: 0 1.5rem 0 0;
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.stats-tabs li:last-child {
-    margin: 0;
-    padding: 0;
-    border: none;
-}
-
-.stats-tabs li a {
-    display: inline-block;
-    font-size: 2.5rem;
-    font-family: "montserrat-regular", sans-serif;
-    font-weight: bold;
-    border: none;
-    color: #000000;
-}
-
-.stats-tabs li a:hover {
-    color: #39b54a;
-}
-
-.stats-tabs li a em {
-    display: block;
-    margin: .6rem 0 0 0;
-    font-size: 1.4rem;
-    font-family: "montserrat-regular", sans-serif;
-    color: #828282;
-}
-
-
-/* ------------------------------------------------------------------- 
- * ## skillbars 
- * ------------------------------------------------------------------- */
-.skill-bars {
-    list-style: none;
-    margin: 6rem 0 3rem;
-}
-
-.skill-bars li {
-    height: .6rem;
-    background: #c9c9c9;
-    width: 100%;
-    margin-bottom: 6.9rem;
-    padding: 0;
-    position: relative;
-}
-
-.skill-bars li strong {
-    position: absolute;
-    left: 0;
-    top: -3rem;
-    font-family: "montserrat-bold", sans-serif;
-    color: #000000;
-    text-transform: uppercase;
-    letter-spacing: .2rem;
-    font-size: 1.4rem;
-    line-height: 2.4rem;
-}
-
-.skill-bars li .progress {
-    background: #000000;
-    position: relative;
-    height: 100%;
-}
-
-.skill-bars li .progress span {
-    position: absolute;
-    right: 0;
-    top: -3.6rem;
-    display: block;
-    font-family: "montserrat-regular", sans-serif;
-    color: #FFFFFF;
-    font-size: 1.1rem;
-    line-height: 1;
-    background: #000000;
-    padding: .6rem .6rem;
-    border-radius: 3px;
-}
-
-.skill-bars li .progress span::after {
-    position: absolute;
-    left: 50%;
-    bottom: -5px;
-    margin-left: -5px;
-    border-right: 5px solid transparent;
-    border-left: 5px solid transparent;
-    border-top: 5px solid #000000;
-    content: "";
-}
-
-.skill-bars li .percent5  { width: 5%; }
-.skill-bars li .percent10 { width: 10%; }
-.skill-bars li .percent15 { width: 15%; }
-.skill-bars li .percent20 { width: 20%; }
-.skill-bars li .percent25 { width: 25%; }
-.skill-bars li .percent30 { width: 30%; }
-.skill-bars li .percent35 { width: 35%; }
-.skill-bars li .percent40 { width: 40%; }
-.skill-bars li .percent45 { width: 45%; }
-.skill-bars li .percent50 { width: 50%; }
-.skill-bars li .percent55 { width: 55%; }
-.skill-bars li .percent60 { width: 60%; }
-.skill-bars li .percent65 { width: 65%; }
-.skill-bars li .percent70 { width: 70%; }
-.skill-bars li .percent75 { width: 75%; }
-.skill-bars li .percent80 { width: 80%; }
-.skill-bars li .percent85 { width: 85%; }
-.skill-bars li .percent90 { width: 90%; }
-.skill-bars li .percent95 { width: 95%; }
-.skill-bars li .percent100 { width: 100%; }
-
-
-
 /* ===================================================================
  * # reusable and common theme styles
  *
@@ -1233,6 +792,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     line-height: 1.255;
     color: #000000;
     margin-top: 0;
+    opacity: 0.7;
 }
 
 .display-2--light {
@@ -2335,28 +1895,6 @@ html.no-csstransitions .home-content__main {
     }
 }
 
-@media only screen and (max-width: 800px) {
-    .about-desc {
-        font-size: 2rem;
-        max-width: 600px;
-    }
-    .stats__count {
-        font-size: 8rem;
-    }
-    .stats h5 {
-        margin-top: 1.2rem;
-    }
-    .testimonials {
-        margin: 0 2rem;
-    }
-    img.testimonials__avatar {
-        height: 12rem;
-        width: 12rem;
-    }
-    .testimonials p {
-        margin-top: 3rem;
-    }
-}
 
 @media only screen and (max-width: 700px) {
     .about__line {
@@ -2364,49 +1902,26 @@ html.no-csstransitions .home-content__main {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
     .s-about {
-        padding-top: 12rem;
+        padding-top: 10rem;
+        padding-bottom: 1rem;
     }
     .about-desc {
         font-size: 1.9rem;
-    }
-    .about-stats {
-        padding-top: 0;
-    }
-    .stats__col {
-        margin: 0;
-        padding-top: 3rem;
-        padding-bottom: 3rem;
-        position: relative;
-    }
-    .stats__col::after {
-        content: "";
-        display: block;
-        height: 1px;
-        width: 250px;
-        background-color: rgba(255, 255, 255, 0.25);
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        margin-left: -125px;
-    }
-    .stats__col:last-child::after {
-        display: none;
-    }
-    .stats__col:nth-child(n) {
-        border: none;
+        max-width: 600px;
     }
     .about__line {
         height: 7.2rem;
     }
     img.testimonials__avatar {
-        height: 10rem;
-        width: 10rem;
+        height: 12rem;
+        width: 12rem;
     }
     .testimonials p {
         font-size: 2rem;
-        margin-top: 2rem;
+        margin-top: 3rem;
+        line-height: 1.5;
     }
 }
 
@@ -2416,17 +1931,6 @@ html.no-csstransitions .home-content__main {
     }
     .stats__count {
         font-size: 7.8rem;
-    }
-    .testimonials p {
-        font-size: 1.8rem;
-        margin-top: 1.5rem;
-    }
-}
-
-@media only screen and (max-width: 320px) {
-    img.testimonials__avatar {
-        height: 7.4rem;
-        width: 7.4rem;
     }
 }
 
@@ -2699,7 +2203,7 @@ a.githublink{
         padding-bottom: 12rem;
     }
     .s-works .intro-wrap {
-        padding: 12rem 0 25.2rem;
+        padding: 10rem 0 25.2rem;
     }
     .works-content {
         margin-top: -25.2rem;
@@ -2721,7 +2225,7 @@ a.githublink{
 section.s-skills {
     padding-top: 12rem;
     padding-bottom: 16rem;
-    background-color: #e6e6e6;
+    background-color: #f5f6f4;
     color: #757575;
     position: relative;
 }
@@ -2820,8 +2324,8 @@ section.s-skills > div.skills-outer{
 
 @media only screen and (max-width: 600px) {
     section.s-skills {
-        padding-top: 12rem;
-        padding-bottom: 4rem;
+        padding-top: 10rem;
+        padding-bottom: 2rem;
     }
     .skills-outer .skillContainer {
         margin-top: 0.5rem;
@@ -3243,7 +2747,7 @@ textarea#contactMessage::placeholder {
 
 @media only screen and (max-width: 600px) {
     .s-contact {
-        padding-top: 12rem;
+        padding-top: 10rem;
         padding-bottom: 0;
     }
     .contact__line {
@@ -3251,7 +2755,7 @@ textarea#contactMessage::placeholder {
         top: -7.2rem;
     }
     .contact-content {
-        padding-bottom: 12rem;
+        padding-bottom: 3rem;
         text-align: center;
     }
     .contact-primary, .contact-secondary {
